--- a/app/globals.css
+++ b/app/globals.css
@@ -144,17 +144,17 @@ body {
   .home-section {
     @apply flex gap-4 justify-between items-start w-full max-lg:flex-col-reverse max-lg:items-center;
   }
-  .companions-grid {
+  .buddies-grid {
     @apply flex flex-wrap gap-4 w-full max-md:justify-center;
   }
-  .companion-card {
-    @apply flex flex-col rounded-4xl border border-black px-4 py-4 gap-5 w-full min-lg:max-w-[410px] justify-between;
+  .buddy-card {
+    @apply flex flex-col rounded-2xl px-4 py-4 gap-5 w-full lg:max-w-[410px] justify-between shadow-xl transition-all duration-500 ease-out hover:-translate-y-1 hover:shadow-2xl;
   }
   .subject-badge {
-    @apply bg-black text-white rounded-4xl text-sm px-2 py-1 capitalize;
+    @apply bg-gray-900 text-white rounded-4xl text-sm px-2 py-1 capitalize;
   }
-  .companion-bookmark {
-    @apply px-2 bg-black rounded-4xl flex items-center h-full aspect-square cursor-pointer;
+  .buddy-bookmark {
+    @apply px-2 bg-gray-900 rounded-4xl flex items-center h-full aspect-square cursor-pointer transition-all duration-500 ease-out hover:-translate-y-1;
   }
   .input {
     @apply !border-black !bg-white focus-visible:!ring-0 focus-visible:!border-black !w-full;
@@ -169,7 +169,7 @@ body {
     @apply bg-cta-gold rounded-4xl px-3 py-1.5 text-black;
   }
   .btn-primary {
-    @apply bg-primary text-white rounded-xl cursor-pointer px-4 py-2 flex items-center gap-2;
+    @apply bg-gray-900 text-white rounded-xl cursor-pointer px-4 py-2 flex items-center gap-2 transition-all duration-500 ease-out hover:-translate-y-1;
   }
   .navbar {
     @apply flex items-center justify-between mx-auto w-full px-14 py-4 bg-white max-sm:px-4;
@@ -177,21 +177,21 @@ body {
   .btn-signin {
     @apply border border-black rounded-4xl px-4 py-2.5 text-sm font-semibold flex items-center gap-2 cursor-pointer;
   }
-  .companion-list {
-    @apply rounded-4xl border border-black px-7 pt-7 pb-10 max-lg:w-full bg-white;
+  .buddy-list {
+    @apply rounded-2xl border border-black px-7 pt-7 pb-10 max-lg:w-full bg-white;
   }
-  .companion-limit {
+  .buddy-limit {
     @apply items-center justify-center flex flex-col gap-4 w-full min-2xl:w-1/2 pt-20 text-center;
   }
 
-  .companion-section {
+  .buddy-section {
     @apply border-2 border-orange-500 w-2/3 max-sm:w-full flex flex-col gap-4 justify-center items-center rounded-lg;
   }
 
-  .companion-avatar {
+  .buddy-avatar {
     @apply size-[300px] flex items-center justify-center rounded-lg max-sm:size-[100px] mt-4;
   }
-  .companion-lottie {
+  .buddy-lottie {
     @apply size-[300px] max-sm:size-[100px];
   }
 
