--- a/app/globals.css
+++ b/app/globals.css
@@ -359,7 +359,7 @@ body {
   }
 
   .buddy-section {
-    @apply border-2 border-orange-500 w-2/3 max-sm:w-full flex flex-col gap-4 justify-center items-center rounded-lg;
+    @apply border-2 border-slate-800 w-2/3 max-sm:w-full flex flex-col gap-4 justify-center items-center rounded-lg;
   }
 
   .buddy-avatar {
