--- a/app/globals.css
+++ b/app/globals.css
@@ -277,7 +277,7 @@ body {
     @apply rounded-4xl border border-black;
   }
   .call-to-action-section {
-    @apply bg-gray-600 text-white rounded-4xl px-7 py-10 flex flex-col items-center text-center gap-5 w-1/3 max-lg:w-1/2 max-md:w-full cursor-pointer;
+    @apply bg-slate-800 text-white rounded-4xl px-7 py-10 flex flex-col items-center text-center gap-5 w-1/3 max-lg:w-1/2 max-md:w-full cursor-pointer;
     @apply smooth-animation hover-lift;
   }
   .call-to-action-badge {
